<resources>
    <string name="app_name">Race2GED</string>
    <string name="class_data_file_name">classschedule.json</string>
    <string-array name="navSecondaryTitlesIcons">
        <item>@drawable/ic_gear</item>
        <item>@drawable/ic_email</item>
        <item>@drawable/ic_help</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="checking_for_class_updates">Checking for Class Schedule updates...</string>
    <string name="error_no_connection">Cannot check for updates. No WiFi or mobile data connection available.</string>
    <string name="error_no_wifi">Cannot check for updates. No WiFi connection available.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_class_data_version">class_data_version</string>
    <string name="pref_check_class_data_only_on_wifi">class_data_wifi</string>
    <string name="pref_check_class_data_for_new_versions">class_data_checking</string>
    <string name="pref_check_class_data_for_new_versions_at_startup">class_data_checking_at_startup</string>
    <string name="pref_show_animations">show_animations</string>
    <string name="pref_alarms">alarmStorage</string>
    <string name="pref_class_data">class_data</string>
    <string name="pref_header_general">General</string>
    <string name="pref_show_animations_title">Show card animations?</string>
    <string name="pref_header_updates">Updates</string>
    <string name="PREF_CHECK_CLASS_DATA_FOR_NEW_VERSIONS_TITLE">Check for class schedule updates?</string>
    <string name="PREF_CHECK_CLASS_DATA_FOR_NEW_VERSIONS_AT_STARTUP_TITLE">Class schedule updates on startup?</string>
    <string name="PREF_CHECK_CLASS_DATA_FOR_NEW_VERSIONS_AT_STARTUP_SUB">Look for updates on app startup?</string>
    <string name="PREF_CHECK_CLASS_DATA_ONLY_ON_WIFI_TITLE">Wifi Only?</string>
    <string name="PREF_CHECK_CLASS_DATA_ONLY_ON_WIFI_SUB">Only use WiFi for updates. Saves mobile data.</string>
    <string name="title_class_list">Classes</string>
    <string name="title_class_detail">Class Detail</string>
    <string name="loading">Loading...</string>
    <string name="content_provided_by">Content Provided by:</string>
    <string name="disclaimer_text">GED® and GED Testing Service® are registered trademarks of the
        American Council on Education and may not be used or reproduced without express written
        permission. The GED® and GED® Testing Service® brands are administered by GED® Testing
        Service® LLC under license from the American Council on Education.</string>
    <string name="title_activity_classes">ClassesActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructor_to_email">Instructor to Email:</string>
    <string name="instructor_email_subject">(RACE2GED App) User Email</string>
    <string name="how_reg">How do I register?</string>
    <string name="talk_to_instruct">Talk to your teacher about registering for the GED® after you pass a practice test.</string>
    <string name="when_sched">When can I schedule?</string>
    <string name="teacher_will_know">Your teacher will know when you are ready to test and will assist you in getting registered and scheduled.</string>
    <string name="what_is_passing">What is the passing score?</string>
    <string name="passing_score">On the 2014 GED® test you need to earn at least 150 points on each subject to pass. Our teachers will be able to give you a practice test that can tell if you are likely to pass.</string>
    <string name="is_there_fee">Is there a fee to take the test?</string>
    <string name="free_with_us">If you attend our classes and pass a practice test, you will receive a scholarship covering the $120.00 cost of your GED® test.</string>
    <string name="ged_reg_info">GED® Exam Registration Information</string>
    <string name="lee">Lee County</string>
    <string name="lee_testing">Lee Co. School Board Office\nLeah Herring</string>
    <string name="scott">Scott County</string>
    <string name="scott_testing">Gate City AE Center\nAmy Statzer</string>
    <string name="wise">Wise County</string>
    <string name="wise_testing">Wise Career and Technical School\nAmy Statzer</string>
    <string name="ged_changed_in_2014_title">GED® Exam Changed In 2014</string>
    <string name="ged_changed_in_2014">IMPORTANT: The GED® test changed in 2014. If you did not pass by December 31, 2013, you must start over with the new test.</string>
    <string name="testing_guidelines">1) Arrive early and take a moment to relax and reduce your anxiety.\n
2) Listen attentively to instructions given by the instructor.\n
3) Read the directions very carefully.\n
4) Plan how you will use the time for the test. Bring your watch and pay close attention to the passing time. Do not let the pace of others cause you to be nervous.\n
5) Do not let difficult questions affect your attitude. Eliminate any choices that you can, then make your best guess and move on.\n
6) Rely on your knowledge and do not watch for patterns. Noticing that the last four answers were “c” is not a good reason to change your answer. Change answers only when you are certain. The answer which comes to mind first is often correct.\n
7) When answering the essay question, organize your thoughts before you begin to write. A short outline on your “draft paper” will improve your thinking. You should have a main idea or issue, several supporting issues and examples to illustrate the issues.\n
8) When answering the essay, paraphrase the original question to form your introductory statement. This benefits you in two ways. First, it helps you get the question straight in your mind. Second, it helps the reader understand how you understood the question and see your perspective.\n
9) When answering the essay, write your answer clearly, so the reader will be able to decode your writing and understand your ideas. Remember to summarize your answer briefly at the end of your writing.</string>
    <string name="greeting_header">Welcome!</string>
    <string name="greeting">Welcome to the journey toward your GED® credential! It is an achievement that will change your life.\n\nTap the icon in the top left corner or slide from the left of the screen to open the navigation drawer to get started. \n\nAlthough this app is free for everyone, the services of the Regional Adult Education Program are
        available to residents of the Virginia counties of Scott, Lee, and Wise and the city of Norton.
    </string>
    <string name="facebook_feed_header">What\'s new?</string>
    <string name="testing_content_areas">2014 GED® Content Areas</string>
    <string name="testing_rla">RLA</string>
    <string name="testing_rla_content">The Reasoning Through Language Arts (RLA) test is 150 minutes long and testing is broken down into three sections:\n\n
• Section 1 (35 minutes*) tests all content\n
• Section 2 (45 minutes) is the Extended Response portion of the test\n
• Student break (10 minutes)\n
• Section 3 (60 minutes*) tests all content\n
    </string>
    <string name="testing_math">Math</string>
    <string name="testing_math_content">The Mathematical Reasoning test is 115 minutes long and is one single section with two parts:\n\n
• Part 1 – (first 5 questions) calculators not allowed\n
• Part 2 – (remaining 41 test questions) calculators allowed\n
• Students must submit their answers to the first five questions before moving on to the rest of the
test. These parts are not timed separately.
    </string>
    <string name="testing_social_studies">Social Studies</string>
    <string name="testing_social_studies_content">The Social Studies test is 90 minutes long and testing is broken down into two sections:\n\n
• Section 1 (65 minutes) tests all content\n
• Section 2 (25 minutes) is the Extended Response portion of the test\n
    </string>
    <string name="testing_science">Science</string>
    <string name="testing_science_content">The Science test is 90 minutes long and is one single section. There are two Short Answer questions
included on the test, but they are not timed separately. Students are expected to manage their time and
spend about 10 minutes on each of the Short Answer questions.
    </string>
    <string name="testing_centers_title">Testing Centers</string>
    <string name="testing_cost_title">Cost</string>
    <string name="testing_passing_title">Passing Scores</string>
    <string name="facebook">Facebook</string>
    <string name="about_contact">Contact Us</string>
    <string name="empty_list_text">Loading…</string>
    <string name="class_empty_list_text">There are no classes currently held here.</string>
    <string name="class_card_alarm_checkbox">Remind me to go to class.</string>
    <string name="not_found_exception">Aww. There was an error loading this content. :(</string>
    <string name="send_question">Send</string>
    <string name="cancel">Cancel</string>
    <string name="full_name_label">YOUR NAME:</string>
    <string name="question_hint">What do you have questions about? We will do what we can to help!</string>
    <string name="question_dialog_title">Submit your Questions</string>
    <string name="question_label">YOUR QUESTIONS:</string>
    <string name="zipcodes_label">YOUR ZIPCODE:</string>
    <string name="email_label">YOUR EMAIL:</string>
    <string name="sample_name">John Smith</string>
    <string name="sample_email">john.smith@gmail.com</string>
    <string-array name="zipcodes">
      <item>24216</item>
      <item>24219</item>
      <item>24221</item>
      <item>24230</item>
      <item>24243</item>
      <item>24244</item>
      <item>24245</item>
      <item>24248</item>
      <item>24250</item>
      <item>24251</item>
      <item>24258</item>
      <item>24263</item>
      <item>24265</item>
      <item>24271</item>
      <item>24273</item>
      <item>24277</item>
      <item>24279</item>
      <item>24281</item>
      <item>24282</item>
      <item>24283</item>
      <item>24290</item>
      <item>24293</item>
    </string-array>
    <string name="resources_ged_math">Math</string>
    <string name="resources_ged_rla">Reading &amp; Language Arts</string>
    <string name="resources_ged_science">Science</string>
    <string name="resources_ged_socialstudies">Social Studies</string>
    <string name="sample_title">TITLE</string>
    <string name="sample_description">DESCRIPTION</string>
</resources>