<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Regional Adult Education Program of Lee, Scott, Wise, and Norton Public Schools
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:requiresFadingEdge="vertical"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="25dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_item_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/full_name_label"
            android:id="@+id/name_label"
            android:layout_marginTop="@dimen/dialog_item_label_margin"
            android:textColor="@android:color/secondary_text_light_nodisable"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/sample_name"
            android:ems="10"
            android:id="@+id/name"
            android:layout_marginBottom="@dimen/dialog_item_margin"
            android:layout_marginLeft="@dimen/dialog_item_margin"
            android:layout_marginRight="@dimen/dialog_item_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email_label"
            android:id="@+id/textView3"
            android:layout_marginTop="@dimen/dialog_item_label_margin"
            android:textColor="@android:color/secondary_text_light_nodisable"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/sample_email"
            android:ems="10"
            android:id="@+id/email"
            android:layout_marginBottom="@dimen/dialog_item_margin"
            android:layout_marginLeft="@dimen/dialog_item_margin"
            android:layout_marginRight="@dimen/dialog_item_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/zipcodes_label"
            android:id="@+id/textView4"
            android:layout_marginTop="@dimen/dialog_item_label_margin"
            android:textColor="@android:color/secondary_text_light_nodisable"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zipcodes"
            android:layout_marginBottom="@dimen/dialog_item_margin"
            android:layout_marginLeft="@dimen/dialog_item_margin"
            android:layout_marginRight="@dimen/dialog_item_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/question_label"
            android:id="@+id/textView5"
            android:layout_marginTop="@dimen/dialog_item_label_margin"
            android:textColor="@android:color/secondary_text_light_nodisable"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/question_hint"
            android:ems="10"
            android:id="@+id/message"
            android:layout_marginBottom="@dimen/dialog_item_margin"
            android:layout_marginLeft="@dimen/dialog_item_margin"
            android:layout_marginRight="@dimen/dialog_item_margin"/>

    </LinearLayout>
</ScrollView>